開発計画書を完成させた

--- a/Forest_Document/DevelopmentPlan/index.html
+++ b/Forest_Document/DevelopmentPlan/index.html
@@ -249,8 +249,62 @@ th {
 <hr>
 <h2>ソフトウェア工学II「樹状整列」開発計画書</h2>
 <div class="belt">
-<h3><a name="KanseiSaseteKudasai">完成させてください</a></h3>
+  <h3><a name="KanseiSaseteKudasai">開発体制</a></h3>
 </div>
+<p>開発に関わるメンバの一覧と開発予定のクラスの担当者を以下に示す。</p>
+<table>
+  <tr>
+    <td style="text-align: right">プロジェクトマネージャ：</td>
+    <td>伊神紗帆</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">設計：</td><td>宮島健太、別所雅之</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">プログラマ：</td><td>綾本公平、林拓也</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">テスト：</td><td>増田亜里紗、伊神紗帆</td>
+</table>
+<table>
+  <tr>
+    <td style="text-align: right">MVCのM(モデル)担当：</td>
+    <td>綾本公平</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">MVCのV(ビュー)担当：</td>
+    <td>林拓也</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">MVCのC(コントローラー)担当：</td>
+    <td>別所雅之</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">MVCの例題(メイン)担当：</td>
+    <td>例</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">樹状整列のForest担当：</td>
+    <td>宮島健太</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">樹状整列のNode担当：</td>
+    <td>林拓也</td>
+  </tr>
+  <tr>
+    <td style="text-align: right">樹状整列のBranch担当：</td>
+    <td>綾本公平</td>
+  </tr>
+</table>
+<div class="belt">
+  <h3><a name="KanseiSaseteKudasai">開発スケジュール</a></h3>
+</div>
+<p>以下に開発スケジュールを示す。</p>
+<a href="developmentPlan.png"><img src="developmentPlan.png" width="484" height="286"></a>
+<table>
+  <tr><td style="text-align: right">作成日:</td><td>7月9日</td></tr>
+  <tr><td style="text-align: right">作成者:</td><td>伊神紗帆</td></tr>
+</table>
 <hr>
 <div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
 </body>
