--- a/Forest_Document/Manual/index.html
+++ b/Forest_Document/Manual/index.html
@@ -249,9 +249,28 @@ th {
 <hr>
 <h2>ソフトウェア工学II「樹状整列」マニュアル</h2>
 <div class="belt">
-<h3><a name="KanseiSaseteKudasai">完成させてください</a></h3>
+  <h3><a name="KanseiSaseteKudasai">インストール方法</a></h3>
+</div>  
+<p>1.あああああああああ</p>
+  <div class="belt-blue">
+    <p>仮置き</p>
+  </div>
+<div class="belt">
+  <h3><a name="KanseiSaseteKudasai">実行方法</a></h3>
+</div>
+<div class="left-tab">
+  <p>実行するためのコマンドは以下の通りである。</p>
+  <div class="belt-blue">
+    <p>$ java -jar forest.jar</p>
+  </div>
+  <p>Mac OS Xの場合はアプリケーション形式をクリックする方が簡易である。</p>
+  <img class="borderless" src="../../Forest/resource/Forest.icns" width="128" height="128" alt="MVC.png">
+  <p>また、openコマンドでMVC.appを開いても実行可能である。</p>
+  <div class="belt-blue">
+    <p>open MVC.app</p>
+  </div>
+  <p>以下に実行例を示す。</p>
 </div>
 <hr>
-<div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
 </body>
 </html>
