--- a/Forest_Document/TestSpecification/index.html
+++ b/Forest_Document/TestSpecification/index.html
@@ -305,9 +305,8 @@ th {
             <td class="left-padding"><code><a href="../Program/index.html#Example-main">main(String[] arguments)</a></code></td>
             <td class="left-padding"><code>void</code></td>
             <td class="left-padding"><code>public static</code></td>
-            <td class="left-padding">コマンドラインを引数として受け取り、…、…。</td>
-            <td class="left-padding">バグ（2010年7月21日）</td>
-            <td class="left-padding">良好（2010年7月21日）</td>
+            <td class="left-padding">第1引数で樹状整列データファイルを受け取って樹状整列を実行する</td>
+            <td class="left-padding">なし</td>
           </tr>
           </tbody>
         </table>
