--- a/Forest_Document/DetailDesign/index.html
+++ b/Forest_Document/DetailDesign/index.html
@@ -248,9 +248,15 @@ th {
 </div>
 <hr>
 <h2>ソフトウェア工学II「樹状整列」詳細設計書</h2>
-<div class="belt">
-<h3><a name="KanseiSaseteKudasai">完成させてください</a></h3>
-</div>
+<ul>
+  <li><a href="#Example">Example</a>（メインクラス）</li>
+  <li><a href="#ForestModel">ForestModel</a>（モデル）</li>
+  <li><a href="#ForestView">ForestView</a>（ビュー）</li>
+  <li><a href="#ForestController">ForestController</a>（コントローラ）</li>
+  <li><a href="#Forest">Forest</a>（フォレスト）</li>
+  <li><a href="#Branch">Branch</a>（ブランチ）</li>
+  <li><a href="#Node">Node</a>（ノード）</li>
+</ul>
 
 <div class="belt">
 <h3><a name="Example">Example</a>（メインクラス）</h3>
@@ -282,7 +288,7 @@ th {
       <table class="content" summary="table">
         <tbody>
           <tr>
-            <td class="center-small"><a href="Model.png"><img class="borderless" src="Model.png" width="441" height="271" alt="Model"></a></td>
+            <td class="center-small"><a href="ForestModel.png"><img class="borderless" src="ForestModel.png" width="441" height="271" alt="ForestModel"></a></td>
             <td class="center"><a href="../TestSpecification/index.html#ForestModel">詳細説明（ForestModel）</a></td>
           </tr>
         </tbody>
@@ -302,7 +308,7 @@ th {
       <table class="content" summary="table">
         <tbody>
           <tr>
-            <td class="center-small"><a href="View.png"><img class="borderless" src="View.png" width="441" height="271" alt="View"></a></td>
+            <td class="center-small"><a href="ForestView.png"><img class="borderless" src="ForestView.png" width="441" height="271" alt="ForestView"></a></td>
             <td class="center"><a href="../TestSpecification/index.html#ForestView">詳細説明（ForestView）</a></td>
           </tr>
         </tbody>
@@ -322,7 +328,7 @@ th {
       <table class="content" summary="table">
         <tbody>
           <tr>
-            <td class="center-small"><a href="Controller.png"><img class="borderless" src="Controller.png" width="441" height="271" alt="Controller"></a></td>
+            <td class="center-small"><a href="ForestController.png"><img class="borderless" src="ForestController.png" width="441" height="271" alt="ForestController"></a></td>
             <td class="center"><a href="../TestSpecification/index.html#ForestController">詳細説明（ForestController）</a></td>
           </tr>
         </tbody>
