Add Name & Copyright

--- a/Forest_Document/index.html
+++ b/Forest_Document/index.html
@@ -253,11 +253,12 @@ th {
 <h2><a name="Members">開発チーム</a></h2>
 </div>
 <ol>
-  <li>氏名（学生番号）</li>
-  <li>氏名（学生番号）</li>
-  <li>氏名（学生番号）</li>
-  <li>氏名（学生番号）</li>
-  <li>氏名（学生番号）</li>
+  <li>伊神紗帆（744050）</li>
+  <li>宮島健太（745167）</li>
+  <li>別所雅之（854526）</li>
+  <li>綾本公平（744041）</li>
+  <li>林拓也（853743）</li>
+  <li>増田亜里紗（745077）</li>
 </ol>
 <div class="belt">
 <h2><a name="Documents">成果物一式</a></h2>
@@ -274,6 +275,6 @@ th {
   <li><a href="Manual/index.html">マニュアル</a></li>
 </ol>
 <hr>
-<div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
+<div class="right-small">Copyright 2020 Project C.A.C., Updated: 2020/08/15 (Created: 2009/11/11)</div>
 </body>
 </html>
