--- a/Forest_Document/TestSpecification/index.html
+++ b/Forest_Document/TestSpecification/index.html
@@ -1156,6 +1156,6 @@ th {
   </table>
 </div>
 <hr>
-<div class="right-small">Copyright 2020 Project xx, Updated: 2020/08/14 (Created: 2009/11/11)</div>
+<div class="right-small">Copyright 2020 Project C.A.C., Updated: 2020/08/15 (Created: 2009/11/11)</div>
 </body>
 </html>
