--- a/Forest_Document/TestResult/index.html
+++ b/Forest_Document/TestResult/index.html
@@ -341,6 +341,6 @@ th {
 
 </pre>
 <hr>
-<div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
+<div class="right-small">Copyright 2020 Project C.A.C., Updated: 2020/08/15 (Created: 2009/11/11)</div>
 </body>
 </html>
