--- a/Forest_Document/Manual/index.html
+++ b/Forest_Document/Manual/index.html
@@ -249,18 +249,18 @@ th {
 <hr>
 <h2>ソフトウェア工学II「樹状整列」マニュアル</h2>
 <div class="belt">
-  <h3><a name="KanseiSaseteKudasai">インストール方法</a></h3>
+  <h3><a name="HowInstall">インストール方法</a></h3>
 </div>  
 <div class="left-tab">
   <p>1. <a href="https://github.com/ma-sa321/se2_2020">Forest(GitHub)</a>にアクセスし、codeをクリックする。</p>
   <p> その後、urlをコピーする。またはzipファイルをDLする。</p>
   <p>2.任意のディレクトリに移動する。</p>
   <div class="belt-blue left-tab">
-    <p>$ cd (任意のディレクトリ)</p>
+    <p>$ cd {任意のディレクトリ}</p>
   </div>
   <p>3-1. cloneする場合、以下のコマンドを実行する。</p>
   <div class="belt-blue left-tab">
-    <p>$  git clone https://github.com/ma-sa321/se2_2020.git</p>
+    <p>$ git clone https://github.com/ma-sa321/se2_2020.git</p>
   </div>
   <p>3-2. zipを解凍する場合、以下のコマンドを実行する。</p>
   <div class="belt-blue left-tab">
@@ -272,7 +272,7 @@ th {
   </div>
   <p>5. 中身の確認。</p>
   <div class="belt-blue left-tab">
-    <p>ls -l</p>
+    <p>$ ls -l</p>
     <p></p>
     <p>README.md</p>
     <p></p>
@@ -335,15 +335,16 @@ th {
     <p>$ make forest</p>
   </div>
   <p>以下に実行例を示す。なお、初期の画面では見切れてしまったので整理終了後の様子は画像で示す</p>
-  <p>make tree</p>
+  <p>$ make tree</p>
   <td class="center-small"><a href="../image/tree.gif"></a><img class="borderless" src="../image/tree.gif" width="408" height="319" alt="semilattice"></a></td>
   <td class="center-small"><a href="../image/tree.png"></a><img class="borderless" src="../image/tree.png" width="408" height="319"</a></td>
-  <p>make forest</p>
+  <p>$ make forest</p>
   <td class="center-small"><a href="../image/forest.gif"></a><img class="borderless" src="../image/forest.gif" width="408" height="319" alt="semilattice"></a></td>
   <td class="center-small"><a href="../image/forest.png"></a><img class="borderless" src="../image/forest.png" width="408" height="319"</a></td>
 </div>
 
 <hr>
+<div class="right-small">Copyright 2020 Project C.A.C., Updated: 2020/08/15 (Created: 2009/11/11)</div>
 </body>
 </html>
 
