--- a/Forest_Document/BasicDesign/index.html
+++ b/Forest_Document/BasicDesign/index.html
@@ -271,6 +271,6 @@ th {
 
 </table>
 <hr>
-<div class="right-small">Copyright 20xx Project xx, Updated: 2020/08/12 (Created: 2009/11/11)</div>
+<div class="right-small">Copyright 2020 Project C.A.C., Updated: 2020/08/12 (Created: 2009/11/11)</div>
 </body>
 </html>
