--- a/Forest_Document/DevelopmentPlan/index.html
+++ b/Forest_Document/DevelopmentPlan/index.html
@@ -249,7 +249,7 @@ th {
 <hr>
 <h2>ソフトウェア工学II「樹状整列」開発計画書</h2>
 <div class="belt">
-  <h3><a name="KanseiSaseteKudasai">開発体制</a></h3>
+  <h3><a name="DevelopmentSystem">開発体制</a></h3>
 </div>
 <p>開発に関わるメンバの一覧と開発予定のクラスの担当者を以下に示す。</p>
 <table>
@@ -297,7 +297,7 @@ th {
   </tr>
 </table>
 <div class="belt">
-  <h3><a name="KanseiSaseteKudasai">開発スケジュール</a></h3>
+  <h3><a name="DevelopmentPlan">開発スケジュール</a></h3>
 </div>
 <p>以下に開発スケジュールを示す。</p>
 <a href="developmentPlan.png"><img src="developmentPlan.png" width="484" height="286"></a>
