--- a/Forest_Document/Manual/index.html
+++ b/Forest_Document/Manual/index.html
@@ -336,11 +336,11 @@ th {
   </div>
   <p>以下に実行例を示す。なお、初期の画面では見切れてしまったので整理終了後の様子は画像で示す</p>
   <p>$ make tree</p>
-  <td class="center-small"><a href="../image/tree.gif"></a><img class="borderless" src="../image/tree.gif" width="408" height="319" alt="semilattice"></a></td>
-  <td class="center-small"><a href="../image/tree.png"></a><img class="borderless" src="../image/tree.png" width="408" height="319"</a></td>
+  <td class="center-small"><a href="image/tree.gif"><img class="borderless" src="image/tree.gif" width="408" height="319" alt="semilattice"></a></td>
+  <td class="center-small"><a href="image/tree.png"><img class="borderless" src="image/tree.png" width="408" height="319"></a></td>
   <p>$ make forest</p>
-  <td class="center-small"><a href="../image/forest.gif"></a><img class="borderless" src="../image/forest.gif" width="408" height="319" alt="semilattice"></a></td>
-  <td class="center-small"><a href="../image/forest.png"></a><img class="borderless" src="../image/forest.png" width="408" height="319"</a></td>
+  <td class="center-small"><a href="image/forest.gif"><img class="borderless" src="image/forest.gif" width="408" height="319" alt="semilattice"></a></td>
+  <td class="center-small"><a href="image/forest.png"><img class="borderless" src="image/forest.png" width="408" height="319"></a></td>
 </div>
 
 <hr>
